/*
 * test_records_enum.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2018 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.apple.foundationdb.record.testenum;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "TestRecordsEnumProto";

import "record_metadata_options.proto";

message MyShapeRecord {
  optional string rec_name = 1 [(field).primary_key = true];
  optional int32 rec_no = 2 [(field).index = { unique: true }];
  enum Size { SMALL = 1; MEDIUM = 2; LARGE = 3; }
  optional Size size = 3;
  enum Color { RED = 10; GREEN = 20; BLUE = 30; }
  optional Color color = 4;
  enum Shape { SQUARE = 100; CIRCLE = 200; TRIANGLE = 300; }
  optional Shape shape = 5;
}

message RecordTypeUnion {
  optional MyShapeRecord _MyShapeRecord = 1;
}
